<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGameFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <Button
        android:id="@+id/Button_Red"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/red"
        android:backgroundTint="#ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:layout_editor_absoluteX="90dp"
        />

    <Button
        android:id="@+id/Button_Green"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/green"
        android:backgroundTint="#00ff00"
        app:layout_constraintTop_toTopOf="@id/Button_Red"
        app:layout_constraintLeft_toRightOf="@id/Button_Red"/>

    <Button
        android:id="@+id/Button_Blue"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/blue"
        android:backgroundTint="#0000ff"
        app:layout_constraintTop_toBottomOf="@id/Button_Red"
        app:layout_constraintLeft_toLeftOf="@id/Button_Red"/>

    <Button
        android:id="@+id/Button_Magenta"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/magenta"
        android:backgroundTint="#ff00ff"
        app:layout_constraintTop_toBottomOf="@id/Button_Green"
        app:layout_constraintLeft_toRightOf="@id/Button_Blue"/>

    <Button
        android:id="@+id/Button_Yellow"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/yellow"
        android:backgroundTint="#ffff00"
        app:layout_constraintTop_toBottomOf="@id/Button_Blue"
        app:layout_constraintLeft_toLeftOf="@id/Button_Blue"/>

    <Button
        android:id="@+id/Button_Cyan"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/cyan"
        android:backgroundTint="#00ffff"
        app:layout_constraintTop_toBottomOf="@id/Button_Magenta"
        app:layout_constraintLeft_toRightOf="@id/Button_Yellow"/>

    <TextView
        android:id="@+id/TextGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/Button_Cyan"
        app:layout_constraintBottom_toTopOf="@id/Button_End"/>

    <Button
        android:id="@+id/Button_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/Button_End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toscore"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>